x-pack/plugins/reporting/export_types/common/layouts/print.css
/*
 ******
 ****** This is a collection of CSS overrides that make Kibana look better for
 ****** generating PDF reports with headless browser
 ******
 */

/**
 *  global
 */

/* elements can hide themselves when shared */
.hide-for-sharing {
  display: none !important;
}

/* hide unusable controls */
.kbnGlobalNav,
kbn-top-nav,
.kbnToaster__container,
filter-bar,
::-webkit-scrollbar,
.euiNavDrawer {
  display: none !important;
}

/* override open/closed positioning of the app wrapper/nav */
.app-wrapper {
  left: 0px !important;
}

/**
 *  Discover Tweaks
 */

/* hide unusable controls */
discover-app .dscTimechart,
discover-app .sidebar-container,
discover-app .kbnCollapsibleSidebar__collapseButton,
discover-app navbar[name="discover-search"],
discover-app .discover-table-footer {
  display: none;
}

/**
 * The global banner (e.g. "Help us improve Elastic...") should not print.
 */

#globalBannerList {
  display: none;
}

/**
 *  Visualize Editor Tweaks
 */

/* hide unusable controls */
visualization-editor .visEditor--default > :not(.visEditor__canvas) {
  display: none;
}
/** THIS IS FOR TSVB UNTIL REFACTOR **/
.tvbEditorVisualization {
  position: static !important;
}
.visualize .tvbVisTimeSeries__legendToggle,
.tvbEditor--hideForReporting {
  /* all non-content rows in interface */
  display: none;
}
/**  END TSVB BAD BAD HACKS **/

/* remove left padding from visualizations so that map lines up with .leaflet-container and
*  setting the position to be fixed and to take up the entire screen, because some zoom levels/viewports
*  are triggering the media breakpoints that cause the .visEditor__canvas to take up more room than the viewport */
visualize-app .visEditor__canvas {
  padding-left: 0px;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

/**
 *  Visualization tweaks
 */

/* hide unusable controls */
.visualize .visLegend__toggle,
.visualize .kbnAggTable__controls/* export raw, export formatted, etc. */,
.visualize .leaflet-container .leaflet-top.leaflet-left/* tilemap controls */,
.visualize paginate-controls {
  display: none;
}

/* slightly increate legend text size for readability */
.visualize visualize-legend .visLegend__valueTitle {
  font-size: 1.2em;
}

/* Ensure the min-height of the small breakpoint isn't used */
.vis-editor visualization {
  min-height: 0 !important;
}

/**
*  Dashboard tweaks
*/

.dshPanel__header {
  /* hide the panel heading with the controls in it like expand */
  display: none !important;
}

/**
 * 1. Reporting manually makes each visualization it wants to screenshot larger, so we need to hide
 * the visualizations in the other panels.  We can only use properties that will be manually set in
 * reporting/export_types/printable_pdf/server/lib/screenshot.js or this will also hide the visualization
 * we want to capture.
 * 2. React grid item's transform affects the visualizations, even when they are using fixed positioning. Chrome seems
 * to handle this fine, but firefox moves the visualizations around.
 */
 dashboard-app .react-grid-item {
  height: 0 !important; /* 1. */
  width: 0 !important; /* 1. */
  transform: none !important; /* 2. */
  -webkit-transform: none !important; /* 2. */
}

